<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="144dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/default_margin" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_letsGetAcquainted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="
        text_lets_get_acquainted,
        text_fill_out_the_profile"
        app:flow_verticalGap="8dp"
        app:flow_verticalStyle="spread_inside"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_lets_get_acquainted"
        style="@style/h1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lets_get_acquainted"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_fill_out_the_profile"
        style="@style/h4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fill_out_the_profile"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        style="@style/customFilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/flow_letsGetAcquainted">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_email"
            style="@style/custom_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        style="@style/customFilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_password"
            style="@style/custom_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        style="@style/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_password"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/button_google"
        style="@style/buttonGoogle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_default"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:text="@string/google"
        app:constraint_referenced_ids="
        google_icon,
        text_google"
        app:flow_horizontalGap="8dp"
        app:flow_horizontalStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/text_or"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <View
        android:id="@+id/google_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/icon_google"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_google"
        style="@style/buttonTextBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textColor="#18181F"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_or"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@style/buttonTextBig"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_big"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/button_solid_orange"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/text_by_clicking_register"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_by_clicking_register"
        style="@style/h4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/by_clicking_register"
        app:layout_constraintBottom_toTopOf="@id/flow_dont_have_account"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="horizontal"
        app:constraint_referenced_ids="
        text_already_have_account,
        text_sign_up"
        app:flow_horizontalGap="12dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_already_have_account"
        style="@style/h3.gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_sign_up"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>