<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".MyProfile">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/myProfileView"
        app:layout_constraintBottom_toBottomOf="@+id/middleGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="@+id/logOutButton"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/logOutButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOutButton"
        style="@style/h3.gray"
        android:layout_width="120dp"
        android:layout_height="@dimen/button_height_default"
        android:background="@drawable/button_bg_border_to_solid"
        android:text="@string/log_out"
        android:textColor="@drawable/text_color_inverse_to_normal"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/personIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/default_margin"
        android:src="@drawable/image_vsorokolit"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/logOutButton" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/personIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/career"
        style="@style/h3.gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/career"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/homeAddress"
        style="@style/h3.gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/home_address"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/career" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/socIon1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/soc_icon_circle"
        app:layout_constraintEnd_toStartOf="@+id/socIon2"
        app:layout_constraintTop_toTopOf="@+id/socIon2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/socIon2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/soc_icon_circle"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/socIon3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/soc_icon_circle"
        app:layout_constraintStart_toEndOf="@+id/socIon2"
        app:layout_constraintTop_toTopOf="@+id/socIon2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="socIon1, socIon2, socIon3" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/h3.gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/go_to_settings"
        android:textColor="@color/inverseMainColor"
        app:layout_constraintBottom_toTopOf="@+id/editProfileButton"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editProfileButton"
        style="@style/baseTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_default"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/button_bg_border_to_solid"
        android:text="@string/edit_profile"
        android:textColor="@drawable/text_color_inverse_to_normal"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@style/buttonTextBig"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_big"
        android:background="@drawable/button_solid_orange"
        android:text="@string/view_my_contacts"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>